// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Breadcrumb-sc-1c5j828-1",
        "isStatic": false,
        "rules": Array [
          "flex:0 1 auto;overflow:hidden;min-width:2.5em;max-width:100%;white-space:nowrap;text-overflow:ellipsis;transition:all 0.3s ease;&:hover,&:focus{flex-shrink:0;}&:before{display:inline-block;opacity:",
          [Function],
          ";padding:0 ",
          [Function],
          "px",
          ";content:\\">\\";transform:scaleX(0.5);}> *{color:inherit;text-decoration:none;&:link:hover{text-decoration:underline;}}&:first-child{&:before{content:none;}}",
        ],
      },
      "displayName": "Breadcrumb",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Breadcrumb-sc-1c5j828-1",
      "target": "li",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Breadcrumbs matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "BreadcrumbsContainer-sc-1c5j828-0",
        "isStatic": false,
        "rules": Array [
          "font-family:",
          [Function],
          ";font-size:",
          [Function],
          ";flex:1 1 auto;display:flex;margin:0;padding:0;flex-direction:row;height:inherit;align-items:stretch;flex-wrap:nowrap;",
        ],
      },
      "displayName": "BreadcrumbsContainer",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "BreadcrumbsContainer-sc-1c5j828-0",
      "target": "ol",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <Breadcrumb
    hideDelimiter={false}
    key="Test 1|0"
  >
    Test 1
  </Breadcrumb>
  <Breadcrumb
    hideDelimiter={false}
    key="Test 2|1"
  >
    Test 2
  </Breadcrumb>
  <Breadcrumb
    hideDelimiter={false}
    key="Test 3|2"
  >
    Test 3
  </Breadcrumb>
  <Breadcrumb
    hideDelimiter={false}
    key="Testing a really long breadcrumb item|3"
  >
    Testing a really long breadcrumb item
  </Breadcrumb>
</StyledComponent>
`;
